--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numedev</title>
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+<!-- SEO Meta Tags -->
+<title>Numedev - Formation et Développement digital au Burundi</title>
+<meta name="description" content="Numedev offre des formations en informatique, développement web et applications mobiles au Burundi. Experts en programmation, bureautique et maintenance informatique.">
+<meta name="keywords" content="formation informatique burundi, développement web bujumbura, cours programmation kiriri, numedev, formation bureautique, maintenance informatique, développement mobile, emmadiblo">
+
+
+<meta property="og:title" content="Numedev - Formation et Développement digital au Burundi">
+<meta property="og:description" content="Formation professionnelle en informatique et développement web au Burundi. Experts en programmation, bureautique et solutions numériques.">
+<meta property="og:image" content="assets/img/clients/client-1.svg">
+<meta property="og:url" content="https://numedev.github.io">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Numedev - Formation et Développement digital au Burundi">
+<meta name="twitter:description" content="Formation professionnelle en informatique et développement web au Burundi. Experts en programmation, bureautique et solutions numériques.">
+<meta name="twitter:image" content="assets/img/clients/client-1.svg">
+
+<!-- Autres Meta Tags -->
+<meta name="author" content="Numedev">
+<meta name="robots" content="index, follow">
+<meta name="language" content="French">
+<meta name="geo.region" content="BI">
+<meta name="geo.placename" content="Bujumbura">
+    
 </head>
 
 <style>
