--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Commencer</a>
+      <a class="btn-getstarted" href="#about">Commencer</a>
 
     </div>
   </header>
@@ -195,7 +195,7 @@
 
           <div class="col-lg-6 position-relative order-lg-last"  data-aos-delay="20">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+            <a href="assets/7b7356fd.mp4" class="glightbox pulsating-play-btn"></a>
           </div>
 
           <div class="col-lg-6 content">
@@ -203,7 +203,7 @@
           <div class="container section-title" >
             <h2>A propos de nous</h2>
             <p>
-              Numedev est une oorganisation des jeunes etudiants de l'universite du Burundi,Campus Kiriri offrant les differents services en informatique et programmation
+              Numedev est une organisation des jeunes étudiants de l'universite du Burundi,Campus Kiriri offrant les différents services en informatique et programmation
              </p>
           </div><!-- End Section Title -->
    
@@ -293,7 +293,7 @@
               <a href="" class="stretched-link">
                 <h3>Formation en Programmation</h3>
               </a>
-              <p>Nos formations en programmation informatique sont adaptées à tous les niveaux. Que vous soyez débutant ou que vous souhaitiez approfondir vos connaissances.</p>
+              <p>Nos formations en programmation informatique sont adaptées à tous les niveaux. Que vous soyez débutant ou que vous souhaitiez approfondir vos connaissances. Nous affrons la programmation web, programmation mobile, programmation des applications windows</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -331,7 +331,7 @@
               <a href="" class="stretched-link">
                 <h3>Formation en Informatique Générale et Avancée</h3>
               </a>
-              <p>Cette formation couvre à la fois les bases de l'informatique et des sujets plus avancés comme les réseaux, la sécurité informatique, l'intelligence artificielle et la blockchain. Nous vous offrons une compréhension approfondie des systèmes informatiques, des algorithmes, et des technologies émergentes, pour vous préparer à évoluer dans le domaine technologique moderne.</p>
+              <p>Cette formation couvre à la fois les bases de l'informatique et des sujets plus avancés comme les réseaux, la sécurité informatique, l'intelligence artificielle et la blockchain. Nous vous offrons une compréhension approfondie des systèmes informatiques, des algorithmes, et des technologies émergentes, pour vous préparer à évoluer dans le domaine technologique moderne avec l'utilisation professionnelle de son PC.</p>
               <a href="" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -351,7 +351,7 @@
       <!-- Section Title -->
       <div class="container section-title" >
         <h2>Notre groupe</h2>
-        <p>Nous sommes un groupe des informaticiens et programmeurs, chacun a sa role</p>
+        <p>Nous sommes un groupe des informaticiens et programmeurs, chacun a sa role:</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -430,8 +430,8 @@
               </div>
             </div>
             <div class="member-info">
-              <h4>Mr Felician</h4>
-              <span>Techinicien en maintenance informatique</span>
+              <h4>Ntiranyibigira Felician</h4>
+              <span>Technicien en maintenance informatique</span>
             </div>
           </div>
         </div><!-- End Team Member -->
@@ -467,7 +467,7 @@
               </div>
             </div>
             <div class="member-info">
-              <h4>Janvier Expendader</h4>
+              <h4>Nzambimana Janvier</h4>
               <span>Développeur desktop et mobile</span>
             </div>
           </div>
@@ -518,11 +518,11 @@
 
               <div class="col-md-6">
 
-                <a href="mailto:contact@numedev.io" target="">
+                <a href="mailto:contact.numedev@gmail.com">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" >
                   <i class="bi bi-envelope"></i>
                   <h3>Email </h3>
-                  <p>contact@numedev.io</p>
+                  <p>contact.numedev@gmail.com</p>
                 </div>
                 </a>
 
@@ -644,9 +644,6 @@ setTimeout(() => {
 }, 10);
 
 });
-
-
-
 
     window.addEventListener('scroll', highlightNavLink);
   });
