--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
           <div class="col-lg-6 position-relative order-lg-last"  data-aos-delay="20">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="assets/7b7356fd.mp4" class="glightbox pulsating-play-btn"></a>
+            <a href="assets/7b7356fd.mp4" muted class="glightbox pulsating-play-btn"></a>
           </div>
 
           <div class="col-lg-6 content">
