--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="relative">
       <div class="loading-bar" id="loadingBar"></div>
     </div>
-    <h2>Chargement...</h2>
+    <h2>Chargement en cours...</h2>
   </div>
   
 
