Update merveu links

--- a/index.html
+++ b/index.html
@@ -462,6 +462,8 @@
                 
                   <a href="https://www.facebook.com/profile.php?id=100070591239714"><i class="bi bi-facebook"></i></a>
                   <a href="//github.com/johnmikebukuru"><i class="bi bi-github"></i></a>
+                  <a href="//x.com/MerveuBit"><i class="bi bi-twitter-x"></i></a>
+                  <a href="//instagram.com/merveubit"><i class="bi bi-instagram"></i></a>
      
                 </div>
               </div>
